<resources>
    <string name="app_name">Weather Application</string>
    <string name="description">This application displays weather information returned by the API http://api.openweathermap.org/ using the endpoint \'Cities in cycle\' and passing it San Jose coordinates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_list">Cities List</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="text_settings">Configure something?</string>
    <string name="no_network">Please check your network.</string>
    <string name="app_version">Version:</string>
    <string name="app_sdk">Min SDK:</string>
    <string name="made_by">Developed by Gabriela Oropeza</string>
    <string name="error">Sorry, Couldn\'t refresh.</string>
    <string name="units" translatable="false">metric</string>
    <string name="temperature_format" translatable="false">%1$.2f°</string>
    <string name="percent_format" translatable="false">%1$.0f%%</string>
    <string name="speed_format" translatable="false">%1$.2f m/s</string>
    <string name="image_url" translatable="false">img/w/%1$s.png</string>
    <string name="title_activity_settings">Settings</string>

    <string name="wind">Wind Speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="temperature">Temperature:</string>
</resources>
